mistralも動いたぽい。ministralがどうなのかは分からん

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "vllm>=0.4.0",
     "openai>=1.30.0",
     "accelerate>=1.11.0",
+    "mistral-common>=1.8.5",
+    "mistral-inference>=1.6.0",
 ]
 
 # メタデータ（必要に応じて編集してください）
